--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "lsp-sample-client",
-	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
-	"license": "MIT",
-	"version": "0.0.1",
-	"publisher": "vscode",
+	"name": "mindes-lsp",
+	"description": "A simple language server for MInDes script",
+	"author": "AMoment",
+	"license": "WTFPL",
+	"version": "0.1.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/A-moment096/MInDes-LSP"
 	},
+	"publisher": "AMoment",
 	"engines": {
 		"vscode": "^1.75.0"
 	},
