Add infile_report.txt support
Now the infile_report.txt can be considered as a mindes file and highlight as usual.

--- a/package.json
+++ b/package.json
@@ -17,17 +17,26 @@
 	"activationEvents": [],
 	"main": "./client/out/extension",
 	"contributes": {
-		"languages": [{
-			"id": "mindes",
-			"aliases": ["mindes", "mindes"],
-			"extensions": ["mindes"],
-			"configuration": "./language-configuration.json"
-		  }],
-		  "grammars": [{
-			"language": "mindes",
-			"scopeName": "source.mindes",
-			"path": "./syntaxes/mindes.tmLanguage.json"
-		  }],
+		"languages": [
+			{
+				"id": "mindes",
+				"aliases": [
+					"mindes",
+					"mindes"
+				],
+				"extensions": [
+					"mindes"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "mindes",
+				"scopeName": "source.mindes",
+				"path": "./syntaxes/mindes.tmLanguage.json"
+			}
+		],
 		"configuration": {
 			"type": "object",
 			"title": "basic configuration",
