--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "AMoment",
 	"icon": "images/MInDes_Icon.jpg",
 	"license": "WTFPL",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/A-moment096/MInDes-LSP"
@@ -100,28 +100,46 @@
 		},
 		"semanticTokenTypes": [
 			{
-				"id": "subkey1"
+				"id": "subkey1",
+				"description": "The first subkey"
 			},
 			{
-				"id": "subkey2"
+				"id": "subkey2",
+				"description": "The second subkey"
 			},
 			{
-				"id": "subkey3"
+				"id": "subkey3",
+				"description": "The third subkey"
 			},
 			{
-				"id": "subkey4"
+				"id": "subkey4",
+				"description": "The forth subkey"
 			},
 			{
-				"id": "subkey5"
+				"id": "subkey5",
+				"description": "The fifth subkey"
 			},
 			{
-				"id": "subkey6"
+				"id": "subkey6",
+				"description": "The sixth subkey"
 			},
 			{
-				"id": "subkey7"
+				"id": "subkey7",
+				"description": "The seventh subkey"
 			},
 			{
-				"id": "subkey8"
+				"id": "subkey8",
+				"description": "The eighth subkey"
+			}
+		],
+		"commands":[
+			{
+				"command": "mindes.extractRawInputFromReport",
+				"title": "MInDes: Extract Original Input Script from Input Report"
+			},
+			{
+				"command": "mindes.extractFullInputFromReport",
+				"title": "MInDes: Extract Fully Prompted Script from Input Report"
 			}
 		]
 	},
